# dpo-meshsmith

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE.md  README.md  README_ASSIMP_FIX.md  THIRD_PARTY_LICENSES.md  build-app-win64.bat  build-libs-win64.bat  config.json  formats.json  generate-app-win64.bat
source/cli/: CMakeLists.txt  cxxopts.h  main.cpp  options.json
source/core/: CMakeLists.txt  Debug.cpp  Debug.h  Engine.cpp  Engine.h  GLTFExporter.cpp  GLTFExporter.h  GLTFExporterLegacy.cpp  GLTFExporterLegacy.h  Options.cpp  Options.h  Processor.cpp  Processor.h  Scene.cpp  Scene.h  VCGMesh.cpp  VCGMesh.h  VCGMeshType.h  library.h  path.h
